# fastapi-react-template

./: .gitignore  Makefile
.devcontainer/: devcontainer.json  start-dev.sh
backend/: pyproject.toml
backend/app/: main.py
frontend/: .eslintrc.cjs  .prettierrc  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx
frontend/src/components/: BackendStatus.tsx
frontend/src/layouts/: app-shell.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: landing.tsx
infra/: docker-compose.yml
